syntax = "proto3";

option go_package = "./raw;raw";

message MenuItem {
    int32 item_id = 1;
    string item_name = 2;
    string category = 3;
    double price = 4;
    bool is_seasonal = 5;
    string available_from = 6; // ISO 8601 format
    string available_to = 7;   // ISO 8601 format
}

message MenuItemBatch {
    repeated MenuItem menu_item = 1;
}

