syntax = "proto3";

package raw;

option go_package = "./raw";

message Store {
  string store_id = 1;
  string store_name = 2;
}

message StoreBatch {
  repeated Store stores = 1;
}
